--- a/CMS/CMS.Web/Views/Company/Details.cshtml
+++ b/CMS/CMS.Web/Views/Company/Details.cshtml
@@ -12,41 +12,79 @@
     <dl class="row">
 
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
+           Company Name:
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Name)
         </dd>
         <dt class="col-sm-2">
-            Country Name
+            Country Name:
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.CountryName)
         </dd>
+        @if(Model.PersonName != null)
+        {
+            <dt class="col-sm-2">
+                Person Name:
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.PersonName)
+            </dd>
+        }
+        else
+        {
+            <dt class="col-sm-2" >
+                Person Name:
+            </dt>
+            <dd class="col-sm-10" >
+                There is no person name to cnotact.
+            </dd>
+        }
+
+        @if (Model.Email != null)
+        {
+            <dt class="col-sm-2">
+                Email:
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Email)
+            </dd>
+        }
+        else
+        {
+            <dt class="col-sm-2" >
+                Email:
+            </dt>
+            <dd class="col-sm-10" >
+                There is no Email to cnotact.
+            </dd>
+        }
+
+        @if (Model.PhoneNumber != null)
+        {
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.PersonName)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.PersonName)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Email)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Email)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.PhoneNumber)
+            Phone Number:
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.PhoneNumber)
-        </dd>
-      
+            </dd>
+        }
+        else
+        {
+            <dt class="col-sm-2" >
+                Phone Number:
+            </dt>
+            <dd class="col-sm-10" >
+                There is no Phone Number to cnotact.
+            </dd>
+        }
 
 
     </dl>
 </div>
 <div class="form-group text-end">
-    <a class="btn btn-secondary" asp-action="GetCompanies">Back to List</a>
     <a asp-action="UpdateCompany" asp-route-id="@Model.Id" class="btn btn-primary">Edit</a>
+    <a class="btn btn-secondary" asp-action="GetCompanies">Back to List</a>
+
 </div>
