--- a/CMS/CMS.Web/Views/Candidates/Delete.cshtml
+++ b/CMS/CMS.Web/Views/Candidates/Delete.cshtml
@@ -58,14 +58,14 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.FullName)
+            Full Name:
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.FullName)
         </dd>
         <dt>
-            Phone Number
+            Phone Number:
         </dt>
 
         <dd>
@@ -88,13 +88,13 @@
         </dd> *@
 
         <dt>
-            CV Provider name
+            CV Provider name:
         </dt>
         <dd>
             @Html.DisplayFor(model => model.CompanyName)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Experience)
+            Experience:
         </dt>
         <dd>
             @Html.DisplayFor(model => model.Experience)
