--- a/CMS/CMS.Web/Views/Company/ConfirmDelete.cshtml
+++ b/CMS/CMS.Web/Views/Company/ConfirmDelete.cshtml
@@ -65,35 +65,73 @@
  
     <dl class="row">
         <dt class="col-sm-2">
-           Company Name
+           Company Name:
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Name)
         </dd>
         <dt class="col-sm-2">
-            Country Name
+            Country Name:
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.CountryName)
         </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.PersonName)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.PersonName)
-        </dd>
-        <dt class="col-sm-2">
-            Email
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Email)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.PhoneNumber)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.PhoneNumber)
-        </dd>
+        @if (Model.PersonName != null)
+        {
+            <dt class="col-sm-2">
+                Person Name:
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.PersonName)
+            </dd>
+        }
+        else
+        {
+            <dt class="col-sm-2">
+                Person Name:
+            </dt>
+            <dd class="col-sm-10">
+                There is no person name to cnotact.
+            </dd>
+        }
+
+        @if (Model.Email != null)
+        {
+            <dt class="col-sm-2">
+                Email:
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Email)
+            </dd>
+        }
+        else
+        {
+            <dt class="col-sm-2">
+                Email:
+            </dt>
+            <dd class="col-sm-10">
+                There is no Email to cnotact.
+            </dd>
+        }
+
+        @if (Model.PhoneNumber != null)
+        {
+            <dt class="col-sm-2">
+                Phone Number:
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.PhoneNumber)
+            </dd>
+        }
+        else
+        {
+            <dt class="col-sm-2">
+                Phone Number:
+            </dt>
+            <dd class="col-sm-10">
+                There is no Phone Number to cnotact.
+            </dd>
+        }
 
       
        
@@ -101,8 +139,9 @@
 
     
 <form method="post" asp-action="DeleteCompany" asp-route-id="@Model.Id" class="text-end">
-    <a asp-action="GetCompanies" class="btn btn-secondary">Back to List</a>
         <button type="button" class="btn btn-danger" onclick="showConfirmationDialog()">Delete</button>
+        <a asp-action="GetCompanies" class="btn btn-secondary">Back to List</a>
+
     </form>
 </div>
 
