--- a/CMS/CMS.Web/Views/Interviews/Delete.cshtml
+++ b/CMS/CMS.Web/Views/Interviews/Delete.cshtml
@@ -59,80 +59,132 @@
     <h4>InterViews</h4>
     <hr />
     <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.FullName)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.FullName)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-        <dt class="col-sm-2">
-            First Interviewer Name:
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.InterviewerName)
-        </dd>
 
         <dt class="col-sm-2">
+            Candidate Name:
+        </dt>
+        <dd class="col-sm-10">
+            @Model.FullName
+        </dd>
+        <dt class="col-sm-2" style="margin-top: 15px;">
+            Position:
+        </dt>
+        <dd class="col-sm-10" style="margin-top: 15px;">
+            @Model.Name
+        </dd>
+        <dt class="col-sm-2" style="margin-top: 15px;">
+            First Interviewer Name:
+        </dt>
+        <dd class="col-sm-10" style="margin-top: 15px;">
+            @Model.InterviewerName
+        </dd>
+
+        <dt class="col-sm-2" style="margin-top: 15px;">
             Second Interviewer Name:
         </dt>
-        <dd class="col-sm-10">
+        <dd class="col-sm-10" style="margin-top: 15px;">
             @Model.SecondInterviewerName
         </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Date)
+        <dt class="col-sm-2" style="margin-top: 15px;">
+            Date:
         </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Date)
+        <dd class="col-sm-10" style="margin-top: 15px;">
+            @Model.Date
         </dd>
-   
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Score)
+        <dt class="col-sm-2" hidden>
+            Parent ID
         </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Score)
-        </dd>
-        <dt class="col-sm-2">
-            Status
+
+        @if (@Model.Score != null)
+        {
+            <dt class="col-sm-2" style="margin-top: 15px;">
+                Score:
+            </dt>
+
+            <dd class="col-sm-10" style="margin-top: 15px;">
+                @Model.Score
+            </dd>
+        }
+        else
+        {
+            <dt class="col-sm-2" style="margin-top: 15px;">
+                Score:
+            </dt>
+
+            <dd class="col-sm-10" style="margin-top: 15px;">
+                There is no score here
+            </dd>
+        }
+
+        @if (@Model.ActualExperience != null)
+        {
+            <dt class="col-sm-2" style="margin-top: 15px;">
+                Actual Experience:
+            </dt>
+            <dd class="col-sm-10" style="margin-top: 15px;">
+                @Model.ActualExperience
+            </dd>
+        }
+        else
+        {
+            <dt class="col-sm-2" style="margin-top: 15px;">
+                Actual Experience:
+            </dt>
+            <dd class="col-sm-10" style="margin-top: 15px;">
+                There is no Actual Experience added here
+            </dd>
+        }
+
+        <dt class="col-sm-2" style="margin-top: 15px;">
+            Status:
         </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.StatusName)
+        <dd class="col-sm-10" style="margin-top: 15px;">
+            @Model.StatusName
         </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Notes)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Notes)
-        </dd>
+        @if (@Model.Notes !=null)
+        {
+            <dt class="col-sm-2" style="margin-top: 15px;">
+                Notes:
+            </dt>
+            <dd class="col-sm-10" style="margin-top: 15px;">
+                @Model.Notes
+            </dd>
+        }
+        else
+        {
+            <dt class="col-sm-2" style="margin-top: 15px;">
+                Notes:
+            </dt>
+            <dd class="col-sm-10" style="margin-top: 15px;">
+                There is no note added here
+            </dd>
+        }
+       
 
         @if (Model.AttachmentId != null)
         {
-            <dt class="col-sm-2">
+            <dt class="col-sm-2" style="margin-top: 15px;">
                 Evaluation:
             </dt>
-            <dd class="col-sm-10">
+            <dd class="col-sm-10" style="margin-top: 15px;">
                 <a asp-controller="Attachments" asp-action="Download" asp-route-id="@Model.AttachmentId">Download evaluation</a>
             </dd>
         }
         else
         {
-            <dt class="col-sm-2">
+            <dt class="col-sm-2" style="margin-top: 15px;">
                 Evaluation:
             </dt>
-            <dd class="col-sm-10">
+            <dd class="col-sm-10" style="margin-top: 15px;">
                 There is no Evaluation for this interview
             </dd>
         }
+
     </dl>
-    
     <form asp-action="Delete" class="text-end">
-         <a class="btn btn-secondary" asp-action="Index">Back to List</a>
         <input type="submit" value="Delete" onclick="showConfirmationDialog(event)" class="btn btn-danger" />
+        <a class="btn btn-secondary" asp-action="Index">Back to List</a>
+
     </form>
 </div>
 
