--- a/CMS/CMS.Web/Views/SearchInterviews/Delete.cshtml
+++ b/CMS/CMS.Web/Views/SearchInterviews/Delete.cshtml
@@ -42,12 +42,12 @@
             @Html.DisplayFor(model => model.ParentId)
         </dd>
 
-        <dt class="col-sm-2">
+       @*  <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Score)
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Score)
-        </dd>
+        </dd> *@
         <dt class="col-sm-2">
             Status
         </dt>
@@ -61,16 +61,17 @@
             @Html.DisplayFor(model => model.Notes)
         </dd>
 
-        <dt class="col-sm-2">
+      @*   <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.AttachmentId)
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.AttachmentId)
-        </dd>
+        </dd> *@
     </dl>
     
     <form asp-action="Delete" class="text-end">
-         <a class="btn btn-secondary" asp-action="Index">Back to List</a>
-        <input type="submit" value="Delete" class="btn btn-danger" /> 
+        <input type="submit" value="Delete" class="btn btn-danger" />
+        <a class="btn btn-secondary" asp-action="Index">Back to List</a>
+
     </form>
 </div>
