--- a/CMS/CMS.Web/Views/SearchInterviews/Details.cshtml
+++ b/CMS/CMS.Web/Views/SearchInterviews/Details.cshtml
@@ -38,12 +38,12 @@
             @Model.ParentId
         </dd>
 
-        <dt class="col-sm-2">
+        @* <dt class="col-sm-2">
             Score:
         </dt>
         <dd class="col-sm-10">
             @Model.Score
-        </dd>
+        </dd> *@
         <dt class="col-sm-2">
             Status:
         </dt>
@@ -57,7 +57,7 @@
             @Model.Notes
         </dd>
 
-        @if (Model.AttachmentId != null)
+       @*  @if (Model.AttachmentId != null)
         {
             <dt class="col-sm-2">
                 Evaluation:
@@ -74,14 +74,14 @@
             <dd class="col-sm-10">
                 There is no Evaluation for this interview
             </dd>
-        }
+        } *@
 
 
 
     </dl>
 </div>
 <div class="form-group text-end">
-    <a class="btn btn-secondary" asp-action="Index">Back to List</a>
     <a asp-action="Edit" asp-route-id="@Model.InterviewsId" class="btn btn-primary">Edit</a>
+    <a class="btn btn-secondary" asp-action="Index">Back to List</a>
     
 </div>
