--- a/CMS/CMS.Web/Views/SearchInterviews/Index.cshtml
+++ b/CMS/CMS.Web/Views/SearchInterviews/Index.cshtml
@@ -70,7 +70,7 @@
 
 
 
-          
+
         </div>
     </div>
 }
@@ -89,9 +89,9 @@
                 <th>Date</th>
                 <th>Status</th>
                 <th hidden>Parent ID</th>
-                <th>Score</th>
+                @* <th>Score</th> *@
                 <th hidden>Notes</th>
-                <th>Evaluation</th>
+                @* <th>Evaluation</th> *@
                 <th>CV</th>
                 <th>Actions</th>
             </tr>
@@ -107,31 +107,36 @@
                         <td>@item.Date</td>
                         <td>@item.StatusName</td>
                         <td hidden>@item.ParentId</td>
-                        <td>@item.Score</td>
+                        @* <td>@item.Score</td> *@
                         <td hidden>@item.Notes</td>
-                        @if (item.AttachmentId != null)
+                        @* @if (item.AttachmentId != null)
                         {
                             <td><a asp-controller="Attachments" asp-action="Download" asp-route-id="@item.AttachmentId">Download evaluation</a></td>
                         }
                         else
                         {
                             <td></td>
-                        }
+                        } *@
                         @if (item.CandidateCVAttachmentId != null)
                         {
-                            <td><a asp-controller="Attachments" asp-action="Download" asp-route-id="@item.CandidateCVAttachmentId">Download CV</a></td>
+                            <td>
+
+                                <a asp-controller="Attachments" asp-action="Download" asp-route-id="@item.CandidateCVAttachmentId">Download CV</a>
+                            </td>
                         }
                         else
                         {
-
-                            <td> </td>
+                            <td>
+                                <p>No CV Available</p>
+                            </td>
                         }
+
                         <td>
                             @if (item.InterviewerRole == "Interviewer" && item.StatusName == StatusCode.GetName("PND"))
                             {
                                 <a class="bx bxs-edit-alt" style="font-size:x-large" asp-controller="Interviews" asp-action="Edit" asp-route-id="@item.InterviewsId"> </a>
                             }
-                          
+
                             <a class="bx bx-detail" style="font-size:x-large" asp-action="Details" asp-route-id="@item.InterviewsId"></a> |
                             <a class="ri-delete-bin-2-line text-danger" style="font-size:x-large" asp-action="Delete" asp-route-id="@item.InterviewsId"></a>
                         </td>
@@ -147,7 +152,7 @@
 <script>
     $(document).ready(function () {
         $('#add-rows3').DataTable({
-            searching: false 
+            searching: false
         });
     });
 </script>
