--- a/CMS/CMS.Web/Views/Interviews/Details.cshtml
+++ b/CMS/CMS.Web/Views/Interviews/Details.cshtml
@@ -82,24 +82,30 @@
             @Model.Notes
         </dd>
 
-        @if (Model.AttachmentId != null)
-            {
-            <dt class="col-sm-2" style="margin-top: 15px;">
-            Evaluation:
-        </dt>
-            <dd class="col-sm-10" style="margin-top: 15px;">
-                <a asp-controller="Attachments" asp-action="Download" asp-route-id="@Model.AttachmentId">Download evaluation</a>
-        </dd>
-        }
-        else
+           @if (User.IsInRole("Interviewer"))
         {
-            <dt class="col-sm-2" style="margin-top: 15px;">
-                Evaluation:
-            </dt>
-            <dd class="col-sm-10" style="margin-top: 15px;">
-               There is no Evaluation for this interview
-            </dd>
+
+            @if (Model.AttachmentId != null)
+            {
+                <dt class="col-sm-2" style="margin-top: 15px;">
+                    Evaluation:
+                </dt>
+                <dd class="col-sm-10" style="margin-top: 15px;">
+                    <a asp-controller="Attachments" asp-action="Download" asp-route-id="@Model.AttachmentId">Download evaluation</a>
+                </dd>
+            }
+            else
+            {
+                <dt class="col-sm-2" style="margin-top: 15px;">
+                    Evaluation:
+                </dt>
+                <dd class="col-sm-10" style="margin-top: 15px;">
+                    There is no Evaluation for this interview
+                </dd>
+            }
+
         }
+      
 
     </dl>
 </div>
