--- a/CMS/CMS.Web/Views/Candidates/Delete.cshtml
+++ b/CMS/CMS.Web/Views/Candidates/Delete.cshtml
@@ -118,7 +118,7 @@
 
     @using (Html.BeginForm())
     {
-        <div class="form-actions no-color text-end" >
+        <div class="form-actions no-color " >
             <button type="button" class="btn btn-danger" onclick="showConfirmationDialog()">Delete</button>
             <a class="btn btn-secondary" asp-action="Index">Back to List</a>
         </div>
