--- a/CMS/CMS.Web/Views/Country/ConfirmDelete.cshtml
+++ b/CMS/CMS.Web/Views/Country/ConfirmDelete.cshtml
@@ -76,7 +76,7 @@
     </dl>
 
 
-    <form method="post" asp-action="DeleteCountry" asp-route-id="@Model.Id" class="text-end">
+    <form method="post" asp-action="DeleteCountry" asp-route-id="@Model.Id" class="">
         <button type="button" class="btn btn-danger" onclick="showConfirmationDialog()">Delete</button>
         <a asp-action="GetCountries" class="btn btn-secondary">Back to List</a>
     </form>
