--- a/CMS/CMS.Web/Views/Interviews/Details.cshtml
+++ b/CMS/CMS.Web/Views/Interviews/Details.cshtml
@@ -109,7 +109,7 @@
 
     </dl>
 </div>
-<div class="form-group text-end">
+<div class="form-group ">
     @{
         string returnAction = "Index";
         if (ViewBag.PreviousAction== "MyInterviews")
