--- a/CMS/CMS.Web/Views/Notifications/Details.cshtml
+++ b/CMS/CMS.Web/Views/Notifications/Details.cshtml
@@ -23,7 +23,7 @@
 <div class="form-group">
     @if (User.IsInRole("HR Manager"))
     {
-        <div class="text-end">
+        <div class="">
         <a class="btn btn-primary" asp-action="Index">Back to main list</a>
         <a class="btn btn-secondary" asp-action="IndexHRnotification" style="margin-left: 12px;">Back to your Notification list</a>
         </div>
