--- a/CMS/CMS.Web/Views/SearchInterviews/Details.cshtml
+++ b/CMS/CMS.Web/Views/SearchInterviews/Details.cshtml
@@ -80,7 +80,7 @@
 
     </dl>
 </div>
-<div class="form-group text-end">
+<div class="form-group ">
     <a asp-action="Edit" asp-route-id="@Model.InterviewsId" class="btn btn-primary">Edit</a>
     <a class="btn btn-secondary" asp-action="Index">Back to List</a>
     
