--- a/CMS/CMS.Web/Views/Account/Create.cshtml
+++ b/CMS/CMS.Web/Views/Account/Create.cshtml
@@ -40,7 +40,7 @@
     </div>
 
 
-    <div class="form-group text-end" style="margin-top: 10px;">
+    <div class="form-group " style="margin-top: 10px;">
         <input type="submit" value="Create" class="btn btn-primary" />
         <a class="btn btn-secondary" asp-action="Index">Back to List</a>
     </div>
