--- a/CMS/CMS.Web/Views/Account/Delete.cshtml
+++ b/CMS/CMS.Web/Views/Account/Delete.cshtml
@@ -86,7 +86,7 @@
 
     </dl>
 
-    <form asp-action="Delete" class="form-group text-end">
+    <form asp-action="Delete" class="form-group ">
         <input type="submit" value="Delete" class="btn btn-danger" onclick="showConfirmationDialog(event)" />
         <a class="btn btn-secondary" asp-action="Index">Back to List</a>
 
