--- a/CMS/CMS.Web/Views/Account/Details.cshtml
+++ b/CMS/CMS.Web/Views/Account/Details.cshtml
@@ -16,7 +16,7 @@
     </dl>
 </div>
 
-<div class="form-group text-end" style="margin-top: 10px;">
+<div class="form-group " style="margin-top: 10px;">
     <a asp-action="Edit" asp-route-id="@Model.RegisterrId" class="btn btn-primary">Edit</a>
     <a class="btn btn-secondary" asp-action="Index">Back to List</a>
 
