--- a/CMS/CMS.Web/Views/Account/Edit.cshtml
+++ b/CMS/CMS.Web/Views/Account/Edit.cshtml
@@ -42,7 +42,7 @@
         <span asp-validation-for="SelectedRole" class="text-danger"></span>
     </div>
 
-    <div class="form-group text-end" style="margin-top: 10px;">
+    <div class="form-group " style="margin-top: 10px;">
         <input type="submit" value="Save" class="btn btn-primary" />
         <a class="btn btn-secondary" asp-action="Index">Back to List</a>
 
