--- a/CMS/CMS.Web/Views/AppRoles/Create.cshtml
+++ b/CMS/CMS.Web/Views/AppRoles/Create.cshtml
@@ -18,10 +18,11 @@
                         <span asp-validation-for="Name" class="text-danger"></span>
                     </div>
 
-                    <div class="form-group text-end">
+                    <div class="form-group" style="margin-top: 10px;">
 
-                        <a class="btn btn-secondary" asp-action="Index">Back to List</a>
                         <input type="submit" value="Create" class="btn btn-outline-primary" />
+                        <a class="btn btn-secondary" asp-action="Index">Back to List</a>
+
                     </div>
                 </form>
             </div>
