--- a/CMS/CMS.Web/Views/AppRoles/Index.cshtml
+++ b/CMS/CMS.Web/Views/AppRoles/Index.cshtml
@@ -9,9 +9,13 @@
     <div class="col-lg-12">
         <div class="card">
             <div class="card-header d-flex align-items-center">
-                <h5 class="card-title mb-0 flex-grow-1">Application Role</h5>
+                <div>
+                    <a asp-action="Create" class="btn btn-primary">Add New Role</a>
+                </div>
+
                
             </div>
+
             <div class="card-body">
 
                 <table id="add-rows" class="table table-nowrap dt-responsive table-bordered display" style="width:100%">
