--- a/CMS/CMS.Web/Views/Candidates/Create.cshtml
+++ b/CMS/CMS.Web/Views/Candidates/Create.cshtml
@@ -30,6 +30,19 @@
         <span asp-validation-for="CompanyId" class="text-danger"></span>
     </div>
 
+    <div class="form-group" style="margin-top: 15px;">
+
+        <label asp-for="PositionId" class="control-label"><span class="text-danger">*</span> Position</label>
+        @if (ViewBag.positions != null)
+        {
+            <select style="width: 30%;" asp-for="PositionId" asp-items="@(ViewBag.positions)" class="form-control">
+                <option value="">-- Select a position --</option>
+
+            </select>
+        }
+
+        <span asp-validation-for="PositionId" class="text-danger"></span>
+    </div>
 
     <div class="form-group" style="margin-top: 15px;">
         <label asp-for="Experience" class="control-label"><span class="text-danger">*</span> Experience</label>
@@ -46,7 +59,7 @@
     </div>
 
    
-    <div class="form-group text-end" >
+    <div class="form-group" style="margin-top: 15px;">
      <input type="submit" value="Create" class="btn btn-primary" />
         <a class="btn btn-secondary" asp-action="Index">Back to List</a>
 
