--- a/CMS/CMS.Web/Views/Candidates/Details.cshtml
+++ b/CMS/CMS.Web/Views/Candidates/Details.cshtml
@@ -48,7 +48,7 @@
     @Html.ActionLink("Back to List", "Index")
 </p>
  *@
-<div class="form-group text-end" style="margin-top: 10px;">
+<div class="form-group " style="margin-top: 10px;">
     <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-primary">Edit</a>
     <a class="btn btn-secondary" asp-action="Index">Back to List</a>
 
