--- a/CMS/CMS.Web/Views/Candidates/Edit.cshtml
+++ b/CMS/CMS.Web/Views/Candidates/Edit.cshtml
@@ -5,19 +5,20 @@
 <form asp-action="Edit" asp-route-id="@Model.Id">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <div class="form-group">
-        <label asp-for="FullName" class="control-label"></label>
+        <label asp-for="FullName" class="control-label"><span class="text-danger">*</span> Full Name</label>
         <input style="width: 30%;" asp-for="FullName" class="form-control" />
         <span asp-validation-for="FullName" class="text-danger"></span>
     </div>
     <div class="form-group" style="margin-top: 15px;">
-        <label asp-for="Phone" class="control-label"></label>
-        <input style="width: 30%;" asp-for="Phone" class="form-control" />
+        <label asp-for="Phone" class="control-label"><span class="text-danger">*</span> Phone</label>
+        <input style="width: 30%;" asp-for="Phone" class="form-control" autocomplete="off" />
         <span asp-validation-for="Phone" class="text-danger"></span>
+
     </div>
 
     <div class="form-group" style="margin-top: 15px;">
 
-        <label asp-for="CompanyId" class="control-label">CV Provider name</label>
+        <label asp-for="CompanyId" class="control-label"><span class="text-danger">*</span> CV Provider name</label>
         @if (ViewBag.CompaniesDTOs != null)
         {
             <select style="width: 30%;" asp-for="CompanyId" class="form-control">
@@ -34,7 +35,7 @@
 
 
     <div class="form-group" style="margin-top: 15px;">
-        <label asp-for="Experience" class="control-label"></label>
+        <label asp-for="Experience" class="control-label"><span class="text-danger">*</span> Experience</label>
         <input style="width: 30%;" asp-for="Experience" class="form-control" />
         <span asp-validation-for="Experience" class="text-danger"></span>
     </div>
@@ -45,7 +46,7 @@
     </div>
     <!-- Add other fields similarly -->
    
-    <div class="form-group text-end" style="margin-top:15px;">
+    <div class="form-group " style="margin-top:15px;">
         <input type="submit" value="Save" class="btn btn-primary" />
         <a class="btn btn-secondary" asp-action="Index">Back to List</a>
 
