--- a/CMS/CMS.Web/Views/Company/ConfirmDelete.cshtml
+++ b/CMS/CMS.Web/Views/Company/ConfirmDelete.cshtml
@@ -138,7 +138,7 @@
     </dl>
 
     
-<form method="post" asp-action="DeleteCompany" asp-route-id="@Model.Id" class="text-end">
+<form method="post" asp-action="DeleteCompany" asp-route-id="@Model.Id" class="">
         <button type="button" class="btn btn-danger" onclick="showConfirmationDialog()">Delete</button>
         <a asp-action="GetCompanies" class="btn btn-secondary">Back to List</a>
 
