--- a/CMS/CMS.Web/Views/Company/Details.cshtml
+++ b/CMS/CMS.Web/Views/Company/Details.cshtml
@@ -83,7 +83,7 @@
 
     </dl>
 </div>
-<div class="form-group text-end">
+<div class="form-group ">
     <a asp-action="UpdateCompany" asp-route-id="@Model.Id" class="btn btn-primary">Edit</a>
     <a class="btn btn-secondary" asp-action="GetCompanies">Back to List</a>
 
