--- a/CMS/CMS.Web/Views/Company/UpdateCompany.cshtml
+++ b/CMS/CMS.Web/Views/Company/UpdateCompany.cshtml
@@ -51,7 +51,7 @@
         <span asp-validation-for="PhoneNumber" class="text-danger"></span>
     </div>
 
-    <div class="form-group text-end" style="margin-top: 10px;">
+    <div class="form-group " style="margin-top: 10px;">
         <input type="submit" class="btn btn-primary" value="Save" />
         <a class="btn btn-secondary" asp-action="GetCompanies">Back to list</a>
 
