--- a/CMS/CMS.Web/Views/Country/ShowCompanies.cshtml
+++ b/CMS/CMS.Web/Views/Country/ShowCompanies.cshtml
@@ -39,7 +39,7 @@
 </div>
 
 
-<div class="form-group text-end">
+<div class="form-group ">
     <a asp-action="UpdateCountry" asp-route-id="@Model.Id" class="btn btn-primary">Edit</a>
     <a asp-action="GetCountries" class="btn btn-secondary">Back to List</a>
 
