--- a/CMS/CMS.Web/Views/Country/UpdateCountry.cshtml
+++ b/CMS/CMS.Web/Views/Country/UpdateCountry.cshtml
@@ -10,7 +10,7 @@
         <input style="width: 30%;" asp-for="Name" class="form-control" />
         <span asp-validation-for="Name" class="text-danger"></span>
     </div>
-    <div class="form-group text-end" style="margin-top:10px;">
+    <div class="form-group " style="margin-top:10px;">
         <input type="submit" class="btn btn-primary" value="Save" />
         <a class="btn btn-secondary" asp-action="GetCountries"> Back to list</a>
 
