--- a/CMS/CMS.Web/Views/Interviews/Create.cshtml
+++ b/CMS/CMS.Web/Views/Interviews/Create.cshtml
@@ -22,11 +22,6 @@
         <span asp-validation-for="CandidateId" class="text-danger"></span>
     </div>
 
-   @*  <div class="form-group">
-        <label asp-for="CandidateId" class="control-label">Candidate Name</label>
-        @Html.DropDownListFor(model => model.CandidateId, (SelectList)ViewBag.candidateList, "Select a Name", new { @class = "form-control" })
-        <span asp-validation-for="CandidateId" class="text-danger"></span>
-    </div> *@
 
 
     <div class="form-group" style="margin-top: 15px;">
@@ -42,40 +37,47 @@
 
         <span asp-validation-for="PositionId" class="text-danger"></span>
     </div>
-  @*   <div class="form-group">
-        <label asp-for="PositionId" class="control-label">Position</label>
-        @Html.DropDownListFor(model => model.PositionId, (SelectList)ViewBag.positionList, "Select a Position", new { @class = "form-control" })
-        <span asp-validation-for="PositionId" class="text-danger"></span>
-    </div> *@
 
 
-    <div class="form-group" style="margin-top: 15px;">
 
-        <label asp-for="InterviewerId" class="control-label"><span class="text-danger">*</span> First Interviewer</label>
-        @if (ViewBag.interviewersList != null)
-        {
-            <select style="width: 30%;" asp-for="InterviewerId" asp-items="@(ViewBag.interviewersList)" class="form-control">
-                <option value="">-- Select an Interviewer --</option>
+    <div class="form-group" style="margin-top: 20px; display: flex; justify-content: space-between; align-items: baseline;">
 
-            </select>
-        }
+        <div style="flex-grow: 1;">
+            <label asp-for="InterviewerId" class="control-label"><span class="text-danger">*</span> First Interviewer</label>
+            @if (ViewBag.interviewersList != null)
+            {
+                <select style="width: 100%;" asp-for="InterviewerId" asp-items="@(ViewBag.interviewersList)" class="form-control">
+                    <option value="">-- Select an Interviewer --</option>
+                </select>
+            }
+            <span asp-validation-for="InterviewerId" class="text-danger"></span>
+        </div>
 
-        <span asp-validation-for="InterviewerId" class="text-danger"></span>
+        <div style="flex-grow: 1; margin-left: 10px;">
+            <label asp-for="SecondInterviewerId" class="control-label">Second Interviewer <span>(optional)</span></label>
+            @if (ViewBag.interviewersList != null)
+            {
+                <select style="width: 100%;" asp-for="SecondInterviewerId" asp-items="@(ViewBag.interviewersList)" class="form-control">
+                    <option value="">-- Select Second Interviewer --</option>
+                </select>
+            }
+            <span asp-validation-for="SecondInterviewerId" class="text-danger"></span>
+        </div>
+
     </div>
 
-      <div class="form-group" style="margin-top: 15px;">
 
-        <label asp-for="SecondInterviewerId" class="control-label">Second Interviewer</label>
-        @if (ViewBag.interviewersList != null)
+    <div class="form-group" style="margin-top: 30px;">
+        <label asp-for="ArchitectureInterviewerId" class="control-label">Architecture Interviewers <span>(optional)</span></label>
+        @if (ViewBag.architecturesList != null)
         {
-            <select style="width: 30%;" style="width: 30%;" asp-for="SecondInterviewerId" asp-items="@(ViewBag.interviewersList)" class="form-control">
-                <option value="">-- Select Second Interviewer --</option>
-
+            <select style="width: 30%;" asp-for="ArchitectureInterviewerId" asp-items="@(ViewBag.architecturesList)" class="form-control">
+                <option value="">-- Select Architecture Interviewer --</option>
             </select>
         }
-
-        <span asp-validation-for="SecondInterviewerId" class="text-danger"></span>
+        <span asp-validation-for="ArchitectureInterviewerId" class="text-danger"></span>
     </div>
+
 
 
   @*   <div class="form-group">
@@ -84,7 +86,7 @@
         <span asp-validation-for="InterviewerId" class="text-danger"></span>
 
     </div> *@
-    <div class="form-group" style="margin-top: 15px;">
+    <div class="form-group" style="margin-top: 30px;">
         <label asp-for="Date" class="control-label"><span class="text-danger">*</span> Date</label>
         <input style="width: 30%;" asp-for="Date" class="form-control" />
         <span asp-validation-for="Date" class="text-danger" id="dateValidationMessage"></span>
@@ -98,7 +100,7 @@
 
    
 
-    <div class="form-group text-end" style="margin-top: 10px;">
+    <div class="form-group " style="margin-top: 10px;">
         <input type="submit" value="Create" class="btn btn-primary" />
         <a class="btn btn-secondary" asp-action="Index">Back to List</a>
 
