--- a/CMS/CMS.Web/Views/Interviews/Delete.cshtml
+++ b/CMS/CMS.Web/Views/Interviews/Delete.cshtml
@@ -181,7 +181,7 @@
         }
 
     </dl>
-    <form asp-action="Delete" class="text-end">
+    <form asp-action="Delete" class="">
         <input type="submit" value="Delete" onclick="showConfirmationDialog(event)" class="btn btn-danger" />
         <a class="btn btn-secondary" asp-action="Index">Back to List</a>
 
