--- a/CMS/CMS.Web/Views/Interviews/Edit.cshtml
+++ b/CMS/CMS.Web/Views/Interviews/Edit.cshtml
@@ -13,33 +13,59 @@
     <div class="form-group">  <input type="hidden" asp-for="InterviewsId" /> </div>
 
   @*  <div class="form-group">  <input type="hidden" asp-for="StatusId" /> </div>*@
-    <div class="form-group">
+    <div class="form-group" style="margin-top: 15px;">
         <label asp-for="CandidateId" class="control-label">Candidate Name</label>
         @Html.DropDownListFor(model => model.CandidateId, (SelectList)ViewBag.candidateList, "Select a Name", new { @class = "form-control custom-dropdown" })
         <span asp-validation-for="CandidateId" class="text-danger"></span>
     </div>
 
-    <div class="form-group">
+    <div class="form-group" style="margin-top: 15px;">
         <label asp-for="PositionId" class="control-label">Position</label>
         @Html.DropDownListFor(model => model.PositionId, (SelectList)ViewBag.positionList, "Select a Position", new { @class = "form-control custom-dropdown" })
         <span asp-validation-for="PositionId" class="text-danger"></span>
     </div>
 
-    <div class="form-group">
-        <label asp-for="InterviewerId" class="control-label">Interviewer</label>
-        @Html.DropDownListFor(model => model.InterviewerId, (SelectList)ViewBag.interviewersList, "Select First Interviewer", new { @class = "form-control custom-dropdown" })
-        <span asp-validation-for="InterviewerId" class="text-danger"></span>
+    <div class="form-group" style="margin-top: 20px; display: flex; justify-content: space-between; align-items: baseline;">
+
+        <div style="flex-grow: 1;">
+            <label asp-for="InterviewerId" class="control-label">First Interviewer</label>
+            @if (ViewBag.interviewersList != null)
+            {
+                <select style="width: 100%;" asp-for="InterviewerId" asp-items="@(ViewBag.interviewersList)" class="form-control">
+                    <option value="">-- Select an Interviewer --</option>
+                </select>
+            }
+            <span asp-validation-for="InterviewerId" class="text-danger"></span>
+        </div>
+
+        <div style="flex-grow: 1; margin-left: 10px;">
+            <label asp-for="SecondInterviewerId" class="control-label">Second Interviewer</label>
+            @if (ViewBag.interviewersList != null)
+            {
+                <select style="width: 100%;" asp-for="SecondInterviewerId" asp-items="@(ViewBag.interviewersList)" class="form-control">
+                    <option value="">-- Select Second Interviewer --</option>
+                </select>
+            }
+            <span asp-validation-for="SecondInterviewerId" class="text-danger"></span>
+        </div>
+
     </div>
 
-    <div class="form-group">
-        <label asp-for="SecondInterviewerId" class="control-label">Interviewer</label>
-        @Html.DropDownListFor(model => model.SecondInterviewerId, (SelectList)ViewBag.interviewersList, "Select Second Interviewer", new { @class = "form-control custom-dropdown" })
-        <span asp-validation-for="SecondInterviewerId" class="text-danger"></span>
+
+     <div class="form-group" style="margin-top: 30px;">
+        <label asp-for="ArchitectureInterviewerId" class="control-label">Architecture Interviewers</label>
+        @if (ViewBag.architecturesList != null)
+        {
+            <select style="width: 30%;" asp-for="ArchitectureInterviewerId" asp-items="@(ViewBag.architecturesList)" class="form-control">
+                <option value="">-- Select Architecture Interviewer --</option>
+            </select>
+        }
+        <span asp-validation-for="ArchitectureInterviewerId" class="text-danger"></span>
     </div>
 
 
 
-    <div class="form-group">
+    <div class="form-group" style="margin-top: 15px;">
         <label asp-for="Date" class="control-label"></label>
         <input style="width:30%;" asp-for="Date" class="form-control" />
         <span asp-validation-for="Date" class="text-danger"></span>
@@ -124,7 +150,7 @@
         <input asp-for="AttachmentId" class="form-control" hidden />
     </div>
 
-    <div class="form-group text-end " style="margin-top:10px;">
+    <div class="form-group  " style="margin-top:10px;">
         <input type="submit" value="Save" class="btn btn-primary" />
         <a class="btn btn-secondary" asp-action="Index">Back to List</a>
 
