--- a/CMS/CMS.Web/Views/Interviews/Index.cshtml
+++ b/CMS/CMS.Web/Views/Interviews/Index.cshtml
@@ -8,21 +8,22 @@
     ViewData["Title"] = "Interviews";
 }
 
+<style>
+    .card-body {
+        width: 100%;
+        max-width: 100%;
+        overflow-y: hidden;
+    }
+</style>
+
 <div class="row">
     <div class="col-lg-12">
         <div class="card">
             <div class="card-header d-flex align-items-center">
 
-                @if (User.IsInRole("Admin"))
-                {
-
-                }
-                else
-                {
                     <div>
                         <a asp-action="Create" class="btn btn-primary">Schedule New Interview</a>
                     </div>
-                }
 
             </div>
             <div class="card-body">
@@ -33,7 +34,9 @@
                             <th>Position</th>
                             <th>First Interviewer</th>
                             <th>Second Interviewer</th>
+                            <th>Architecture</th>
                             <th>Date</th>
+                            <th>Time</th>
                             <th>Status</th>
                             <th hidden>Parent ID</th>
                             <th>Score</th>
@@ -59,7 +62,16 @@
                                     {
                                         <td>There is no Second Interviewer</td>
                                     }
-                                    <td>@item.Date</td>
+                                    @if (item.ArchitectureInterviewerId != null)
+                                    {
+                                        <td>@item.ArchitectureInterviewerName</td>
+                                    }
+                                    else
+                                    {
+                                        <td>There is no Architecture Interviewer</td>
+                                    }
+                                    <td>@item.Date.ToString("dd-MM-yyyy")</td>
+                                    <td>@item.Date.ToString("HH:mm")</td>
                                     <td>@item.StatusName</td>
                                     <td hidden>@item.ParentId</td>
                                     <td>@item.Score</td>
