--- a/CMS/CMS.Web/Views/Interviews/UpdateAfterInterview.cshtml
+++ b/CMS/CMS.Web/Views/Interviews/UpdateAfterInterview.cshtml
@@ -92,7 +92,7 @@
         </div>
     }
   <p>
-        <div class="form-group text-end">
+        <div class="form-group ">
             <button type="submit" class="btn btn-primary">Save</button>
             <a class="btn btn-secondary" asp-action="MyInterviews">Back to List</a>
 
