--- a/CMS/CMS.Web/Views/Position/AddPosition.cshtml
+++ b/CMS/CMS.Web/Views/Position/AddPosition.cshtml
@@ -17,7 +17,7 @@
     </div>
  
    
-    <div class="form-group text-end" style="margin-top: 10px;">
+    <div class="form-group " style="margin-top: 10px;">
         <button type="submit" class="btn btn-primary">Add</button>
         <a class="btn btn-secondary" asp-action="GetPositions"> Back to list</a>
 
