--- a/CMS/CMS.Web/Views/Position/GetDeleteConfirmation.cshtml
+++ b/CMS/CMS.Web/Views/Position/GetDeleteConfirmation.cshtml
@@ -93,7 +93,7 @@
     </dl>
 
 
-<form asp-controller="Position" asp-action="DeletePosition" method="post" class="text-end">
+<form asp-controller="Position" asp-action="DeletePosition" method="post" class="">
     <input type="hidden" asp-for="Id" />
         <button type="button" class="btn btn-danger" onclick="showConfirmationDialog()">Delete</button>
         <a asp-action="GetPositions" class="btn btn-secondary">Back To List</a>
