--- a/CMS/CMS.Web/Views/SearchInterviews/Delete.cshtml
+++ b/CMS/CMS.Web/Views/SearchInterviews/Delete.cshtml
@@ -69,7 +69,7 @@
         </dd> *@
     </dl>
     
-    <form asp-action="Delete" class="text-end">
+    <form asp-action="Delete" class="">
         <input type="submit" value="Delete" class="btn btn-danger" />
         <a class="btn btn-secondary" asp-action="Index">Back to List</a>
 
