--- a/CMS/CMS.Web/Views/SearchInterviews/Edit.cshtml
+++ b/CMS/CMS.Web/Views/SearchInterviews/Edit.cshtml
@@ -121,7 +121,7 @@
         <input asp-for="AttachmentId" class="form-control" hidden />
     </div>
 
-    <div class="form-group text-end " style="margin-top:10px;">
+    <div class="form-group  " style="margin-top:10px;">
         <input type="submit" value="Save" class="btn btn-primary" />
         <a class="btn btn-secondary" asp-action="Index">Back to List</a>
 
