--- a/CMS/CMS.Web/Views/Shared/_Layout.cshtml
+++ b/CMS/CMS.Web/Views/Shared/_Layout.cshtml
@@ -299,7 +299,51 @@
 
                         }
 
+                        else if (User.IsInRole("Solution Architecture"))
+                        {
+                            <script>
+                                document.addEventListener("DOMContentLoaded", function () {
+                                    loadNotificationsArchitecture();
+                                });
+                            </script>
+                            <div class="dropdown topbar-head-dropdown ms-1 header-item" id="notificationDropdownArchitecture">
+                                <button type="button" class="btn btn-icon btn-topbar btn-ghost-secondary rounded-circle" id="page-header-notifications-dropdownArchitecture" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-haspopup="true" aria-expanded="false">
+                                    <i class='bx bx-bell fs-22'></i>
+                                    <span class="position-absolute topbar-badge fs-10 translate-middle badge rounded-pill bg-danger" id="notification-badgeArchitecture"><span class="visually-hidden">unread messages</span></span>
+                                </button>
+                                <div class="dropdown-menu dropdown-menu-lg dropdown-menu-end p-0" aria-labelledby="page-header-notifications-dropdownArchitecture">
+                                    <div class="dropdown-head bg-primary bg-pattern rounded-top">
+                                        <div class="p-3">
+                                            <div class="row align-items-center">
+                                                <div class="col">
+                                                    <h6 class="m-0 fs-16 fw-semibold text-white">Notifications</h6>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="px-2 pt-2">
+                                            <ul class="nav nav-tabs dropdown-tabs nav-tabs-custom" data-dropdown-tabs="true" id="notificationItemsTabArchitecture" role="tablist">
+                                                <li class="nav-item waves-effect waves-light">
+                                                    <a class="nav-link active" data-bs-toggle="tab" href="#all-noti-tabArchitecture" role="tab" aria-selected="true">
+                                                        All
+                                                    </a>
+                                                </li>
+                                            </ul>
+                                        </div>
+                                    </div>
 
+                                    <div id="notifications-listArchitecture">
+                                        <!-- Notifications will be loaded here dynamically -->
+                                    </div>
+
+                                    <div class="my-3 text-center view-all">
+                                        <a asp-action="IndexArchinotification" asp-controller="Notifications" class="btn btn-soft-success waves-effect waves-light" id="see-all-linkArchitecture">
+                                            View All Notifications <i class="ri-arrow-right-line align-middle"></i>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+
+                        }
 
 
 
@@ -415,7 +459,7 @@
                     Action = "MyInterviews",
                     Icon = "ri-team-fill",
                     Label = "My Interviews",
-                    Roles = new[] {"Interviewer","HR Manager", "General Manager"}
+                    Roles = new[] {"Interviewer","HR Manager", "General Manager","Solution Architecture"}
                     },
                     new
                     {
@@ -463,7 +507,7 @@
                     Action = "Index",
                     Icon = "ri-map-pin-user-fill",
                     Label = "Users",
-                    Roles = new[] {"Admin"}
+                    Roles = new[] {"Admin","HR Manager"}
                     },
                     //new
                     //{
@@ -496,7 +540,15 @@
                     Icon = "bx bx-search-alt-2",
                     Label = "Interviews Filter",
                     Roles = new[] {"Admin","HR Manager"}
-                    },
+                    }
+                    // new
+                    // {
+                    // Controller =  "AppRoles",
+                    // Action = "Index",
+                    // Icon = "bx bx-shield",
+                    // Label = "Roles",
+                    // Roles = new[] {"Admin","HR Manager"}
+                    // },
 
                                 };
                     }
@@ -591,32 +643,7 @@
         </div>
     </div>
 
-    @*     <script>
-    // Function to fetch and display notifications
-    function loadNotifications() {
-    // Make an AJAX request to fetch notifications
-    $.get('/notifications', function (data) {
-    // Assuming 'data' contains an array of notifications
-    var notifications = data.notifications;
-
-    // Clear the existing notifications
-    $('#notifications-list').empty();
-
-    // Loop through the notifications and display them
-    notifications.forEach(function (notification) {
-    var notificationHtml = '<div class="notification">' + notification.message + '</div>';
-    $('#notifications-list').append(notificationHtml);
-    });
-    });
-    }
-
-    // Attach a click event to the notification icon
-    $('#notification-container').on('click', function () {
-    // Load and display notifications when the icon is clicked
-    loadNotifications();
-    });
-    </script>
-    *@
+   
 
     <!-- JAVASCRIPT -->
     <script src="~/theme/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -824,6 +851,66 @@
         }
     </script>
 
+    @* Architecture *@
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            const notificationButtonArchitecture = document.getElementById("page-header-notifications-dropdownArchitecture");
+
+            if (notificationButtonArchitecture != undefined) {
+                notificationButtonArchitecture.addEventListener("click", loadNotificationsArchitecture);
+                updateBadgeCountArchitecture(0);
+            }
+        });
+        var ArchitectureNotificationURl = '@Url.Action("GetNotificationsForArchitecture", "Notifications")';
+
+        async function loadNotificationsArchitecture() {
+            try {
+                const response = await fetch(ArchitectureNotificationURl);
+                if (!response.ok) {
+                    throw new Error(`Request failed with status ${response.status}`);
+                }
+
+                const notifications = await response.json();
+                const notificationsList = document.getElementById("notifications-listArchitecture");
+
+                if (notifications.length > 0) {
+                    notificationsList.innerHTML = "";
+
+                    // Display the last 2 notifications
+                    const lastTwoNotifications = notifications.slice(-2).reverse();
+
+                    lastTwoNotifications.forEach((notification) => {
+                        const listItem = document.createElement("div");
+                        listItem.classList.add("notification-item");
+                        listItem.innerHTML = `
+                                                                        <div class="notification-title">${notification.title}</div>
+                                                                        <div class="notification-body">${notification.bodyDesc}</div>
+                                                                    `;
+
+                        notificationsList.appendChild(listItem);
+                    });
+
+                    // Check if there are more than 2 notifications
+                    if (notifications.length > 2) {
+                        const seeAllLink = document.getElementById("see-all-linkArchitecture");
+                        seeAllLink.style.display = "block"; // Display the "See All" link
+                    }
+
+                    updateBadgeCountArchitecture(notifications.length);
+                } else {
+                    notificationsList.innerHTML = "<p class='no-notifications'>No notifications available.</p>";
+                    updateBadgeCountArchitecture(0);
+                }
+            } catch (error) {
+                console.error("Error loading notifications:", error);
+            }
+        }
+
+        function updateBadgeCountArchitecture(count) {
+            const badge = document.getElementById("notification-badgeArchitecture");
+            badge.textContent = count.toString();
+        }
+    </script>
 
     <script>
         function updateYear() {
