--- a/CMS/CMS.Web/Views/Status/Add.cshtml
+++ b/CMS/CMS.Web/Views/Status/Add.cshtml
@@ -13,7 +13,7 @@
         <span asp-validation-for="Code" class="text-danger"></span>
     </div>
  
-    <div class="form-group text-end" style="margin-top: 10px;">
+    <div class="form-group " style="margin-top: 10px;">
         <a class="btn btn-secondary" asp-action="Get"> back to list</a>
         <button type="submit" class="btn btn-primary">Add</button>
     </div>
